// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Cortisone Integration Test parses cortisone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Cortisone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, null, '=', null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(4, v3);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, null, '=', null, null, null, null, null] });
export const v6 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v7 = Linear(['O']);
export const v8 = v6.attach(3, v7);
export const v9 = Linear(['C']);
export const v10 = v8.attach(5, v9);
export const v11 = Linear(['C', 'C', 'O']);
export const v12 = Linear(['O'], ['=']);
export const v13 = v11.attach(1, v12);
export const v14 = v10.attach(6, v13);
export const v15 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v16 = v4.fuse(0, v5);
export const v17 = v16.addRing(8, v14);
export const v18 = v17.addRing(12, v15);
export const v19 = Molecule([v1, v18]);"
`;

exports[`Hydrocortisone Integration Test parses hydrocortisone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Hydrocortisone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, null, '=', null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(4, v3);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, null, '=', null, null, null, null, null] });
export const v6 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v7 = Linear(['O']);
export const v8 = v6.attach(3, v7);
export const v9 = Linear(['C']);
export const v10 = v8.attach(5, v9);
export const v11 = Linear(['C', 'C', 'O']);
export const v12 = Linear(['O'], ['=']);
export const v13 = v11.attach(1, v12);
export const v14 = v10.attach(6, v13);
export const v15 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v16 = v4.fuse(0, v5);
export const v17 = v16.addRing(8, v14);
export const v18 = v17.addRing(12, v15);
export const v19 = Linear(['O']);
export const v20 = Molecule([v1, v18, v19]);"
`;

exports[`Prednisone Integration Test parses prednisone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "8": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Prednisone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, '=', null, null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(3, v3);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, '=', null, '=', null, null, null, null] });
export const v6 = Linear(['O']);
export const v7 = v5.attach(8, v6);
export const v8 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v9 = Linear(['C']);
export const v10 = v8.attach(5, v9);
export const v11 = Linear(['C', 'C', 'O']);
export const v12 = Linear(['O'], ['=']);
export const v13 = v11.attach(1, v12);
export const v14 = v10.attach(6, v13);
export const v15 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v16 = v4.fuse(0, v7);
export const v17 = v16.addRing(8, v14);
export const v18 = v17.addRing(12, v15);
export const v19 = Molecule([v1, v18]);"
`;

exports[`Prednisolone Integration Test parses prednisolone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "8": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Prednisolone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, '=', null, null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(3, v3);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, '=', null, '=', null, null, null, null] });
export const v6 = Linear(['O']);
export const v7 = v5.attach(8, v6);
export const v8 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v9 = Linear(['O']);
export const v10 = v8.attach(3, v9);
export const v11 = Linear(['C']);
export const v12 = v10.attach(5, v11);
export const v13 = Linear(['C', 'C', 'O']);
export const v14 = Linear(['O'], ['=']);
export const v15 = v13.attach(1, v14);
export const v16 = v12.attach(6, v15);
export const v17 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v18 = v4.fuse(0, v7);
export const v19 = v18.addRing(8, v16);
export const v20 = v19.addRing(12, v17);
export const v21 = Molecule([v1, v20]);"
`;

exports[`Methylprednisolone Integration Test parses methylprednisolone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "8": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Methylprednisolone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, '=', null, null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(3, v3);
export const v5 = Linear(['C']);
export const v6 = v4.attach(4, v5);
export const v7 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, '=', null, '=', null, null, null, null] });
export const v8 = Linear(['O']);
export const v9 = v7.attach(8, v8);
export const v10 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v11 = Linear(['O']);
export const v12 = v10.attach(3, v11);
export const v13 = Linear(['C']);
export const v14 = v12.attach(5, v13);
export const v15 = Linear(['C', 'C', 'O']);
export const v16 = Linear(['O'], ['=']);
export const v17 = v15.attach(1, v16);
export const v18 = v14.attach(6, v17);
export const v19 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v20 = v6.fuse(0, v9);
export const v21 = v20.addRing(8, v18);
export const v22 = v21.addRing(12, v19);
export const v23 = Molecule([v1, v22]);"
`;

exports[`Dexamethasone Integration Test parses dexamethasone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Dexamethasone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['C']);
export const v4 = v2.attach(4, v3);
export const v5 = Linear(['O']);
export const v6 = v4.attach(5, v5);
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2 });
export const v8 = Linear(['F']);
export const v9 = v7.attach(3, v8);
export const v10 = Linear(['O']);
export const v11 = v9.attach(4, v10);
export const v12 = Linear(['C']);
export const v13 = v11.attach(6, v12);
export const v14 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v15 = Linear(['C']);
export const v16 = v14.attach(5, v15);
export const v17 = Linear(['F']);
export const v18 = v16.attach(6, v17);
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(3, v20);
export const v22 = Linear(['C']);
export const v23 = v21.attach(6, v22);
export const v24 = FusedRing({ metadata: { rings: [{ ring: v6, start: 1, end: 22, atoms: [{ position: 1, depth: 0, value: 'C', rings: [1, 1] }, { position: 2, depth: 0, value: 'C', rings: [1] }, { position: 3, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 20, depth: 0, value: 'C', rings: [2, 1] }, { position: 22, depth: 0, value: 'C', rings: [1] }] }, { ring: v13, start: 3, end: 20, atoms: [{ position: 3, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 4, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 15, depth: 0, value: 'C', rings: [3, 2] }, { position: 17, depth: 0, value: 'C', rings: [2] }, { position: 19, depth: 0, value: 'C', rings: [2] }, { position: 20, depth: 0, value: 'C', rings: [2, 1] }] }, { ring: v18, start: 4, end: 15, atoms: [{ position: 4, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 5, depth: 0, value: 'C', rings: [3] }, { position: 6, depth: 0, value: 'C', rings: [3] }, { position: 7, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 13, depth: 0, value: 'C', rings: [4, 3] }, { position: 15, depth: 0, value: 'C', rings: [3, 2] }] }, { ring: v23, start: 7, end: 13, atoms: [{ position: 7, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 8, depth: 0, value: 'C', bond: '=', rings: [4] }, { position: 9, depth: 0, value: 'C', rings: [4] }, { position: 11, depth: 0, value: 'C', rings: [4] }, { position: 12, depth: 0, value: 'C', bond: '=', rings: [4] }, { position: 13, depth: 0, value: 'C', rings: [4, 3] }] }] } });
export const v25 = Linear(['C', 'C', 'O']);
export const v26 = Linear(['O'], ['=']);
export const v27 = v25.attach(1, v26);
export const v28 = Molecule([v1, v24, v27]);"
`;

exports[`Triamcinolone Integration Test parses triamcinolone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "8": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 8,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "7": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 3,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Triamcinolone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['O']);
export const v4 = v2.attach(3, v3);
export const v5 = Linear(['F']);
export const v6 = v4.attach(5, v5);
export const v7 = Ring({ atoms: 'C', size: 8, ringNumber: 2 });
export const v8 = Linear(['O']);
export const v9 = v7.attach(3, v8);
export const v10 = Linear(['F']);
export const v11 = v9.attach(5, v10);
export const v12 = Linear(['O']);
export const v13 = v11.attach(6, v12);
export const v14 = Linear(['C']);
export const v15 = v13.attach(8, v14);
export const v16 = Ring({ atoms: 'C', size: 10, ringNumber: 3, offset: 3, bonds: [null, null, null, null, '=', null, null, '=', null, null], branchDepths: [0, 0, 1, 1, 1, 1, 1, 1, 1, 1] });
export const v17 = Linear(['O'], ['=']);
export const v18 = v16.attach(7, v17, { sibling: true });
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(3, v20);
export const v22 = FusedRing({ metadata: { rings: [{ ring: v6, start: 1, end: 17, atoms: [{ position: 1, depth: 0, value: 'C', rings: [1, 2, 1, 2] }, { position: 2, depth: 0, value: 'C', rings: [1, 2] }, { position: 3, depth: 0, value: 'C', rings: [1, 2] }, { position: 5, depth: 0, value: 'C', rings: [3, 3, 1, 2] }, { position: 17, depth: 0, value: 'C', rings: [1, 2] }] }, { ring: v15, start: 1, end: 22, atoms: [{ position: 1, depth: 0, value: 'C', rings: [1, 2, 1, 2] }, { position: 2, depth: 0, value: 'C', rings: [1, 2] }, { position: 3, depth: 0, value: 'C', rings: [1, 2] }, { position: 5, depth: 0, value: 'C', rings: [3, 3, 1, 2] }, { position: 17, depth: 0, value: 'C', rings: [1, 2] }, { position: 19, depth: 0, value: 'C', rings: [2] }, { position: 21, depth: 0, value: 'C', rings: [2] }, { position: 22, depth: 0, value: 'C', rings: [2] }] }, { ring: v18, start: 5, end: 15, atoms: [{ position: 5, depth: 0, value: 'C', rings: [3, 3, 1, 2] }, { position: 6, depth: 0, value: 'C', rings: [3] }, { position: 7, depth: 1, value: 'C', rings: [3] }, { position: 8, depth: 1, value: 'C', rings: [3] }, { position: 9, depth: 1, value: 'C', rings: [4, 3, 4] }, { position: 10, depth: 1, value: 'C', bond: '=', rings: [3, 4] }, { position: 11, depth: 1, value: 'C', rings: [3, 4] }, { position: 13, depth: 1, value: 'C', rings: [3, 4] }, { position: 14, depth: 1, value: 'C', bond: '=', rings: [3, 4] }, { position: 15, depth: 1, value: 'C', rings: [3, 4] }] }, { ring: v21, start: 9, end: 15, atoms: [{ position: 9, depth: 1, value: 'C', rings: [4, 3, 4] }, { position: 10, depth: 1, value: 'C', bond: '=', rings: [3, 4] }, { position: 11, depth: 1, value: 'C', rings: [3, 4] }, { position: 13, depth: 1, value: 'C', rings: [3, 4] }, { position: 14, depth: 1, value: 'C', bond: '=', rings: [3, 4] }, { position: 15, depth: 1, value: 'C', rings: [3, 4] }] }] } });
export const v23 = Linear(['C', 'C', 'O']);
export const v24 = Linear(['O'], ['=']);
export const v25 = v23.attach(1, v24);
export const v26 = Molecule([v1, v22, v25]);"
`;

exports[`Budesonide Integration Test parses budesonide 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {
            "2": "O",
            "5": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 5,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Budesonide Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 5, branchDepths: [0, 0, 0, 0, 1] });
export const v3 = v2.substitute(2, 'O');
export const v4 = v3.substitute(5, 'O');
export const v5 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 2 });
export const v6 = Linear(['C']);
export const v7 = v5.attach(4, v6);
export const v8 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v9 = Linear(['F']);
export const v10 = v8.attach(3, v9);
export const v11 = Linear(['O']);
export const v12 = v10.attach(4, v11);
export const v13 = Linear(['C']);
export const v14 = v12.attach(6, v13);
export const v15 = Ring({ atoms: 'C', size: 6, ringNumber: 4 });
export const v16 = Linear(['C']);
export const v17 = v15.attach(5, v16);
export const v18 = Linear(['F']);
export const v19 = v17.attach(6, v18);
export const v20 = Ring({ atoms: 'C', size: 6, ringNumber: 5, bonds: ['=', null, null, '=', null, null] });
export const v21 = Linear(['O'], ['=']);
export const v22 = v20.attach(3, v21);
export const v23 = Linear(['C']);
export const v24 = v22.attach(6, v23);
export const v25 = FusedRing({ metadata: { rings: [{ ring: v4, start: 3, end: 27, atoms: [{ position: 3, depth: 0, value: 'C', rings: [1, 1] }, { position: 4, depth: 0, value: 'O', rings: [1] }, { position: 5, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 26, depth: 0, value: 'C', rings: [2, 1] }, { position: 27, depth: 1, value: 'O', rings: [1] }] }, { ring: v7, start: 5, end: 26, atoms: [{ position: 5, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 6, depth: 0, value: 'C', rings: [2] }, { position: 7, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 24, depth: 0, value: 'C', rings: [3, 2] }, { position: 26, depth: 0, value: 'C', rings: [2, 1] }] }, { ring: v14, start: 7, end: 24, atoms: [{ position: 7, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 8, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 19, depth: 0, value: 'C', rings: [4, 3] }, { position: 21, depth: 0, value: 'C', rings: [3] }, { position: 23, depth: 0, value: 'C', rings: [3] }, { position: 24, depth: 0, value: 'C', rings: [3, 2] }] }, { ring: v19, start: 8, end: 19, atoms: [{ position: 8, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 9, depth: 0, value: 'C', rings: [4] }, { position: 10, depth: 0, value: 'C', rings: [4] }, { position: 11, depth: 0, value: 'C', rings: [5, 5, 4] }, { position: 17, depth: 0, value: 'C', rings: [5, 4] }, { position: 19, depth: 0, value: 'C', rings: [4, 3] }] }, { ring: v24, start: 11, end: 17, atoms: [{ position: 11, depth: 0, value: 'C', rings: [5, 5, 4] }, { position: 12, depth: 0, value: 'C', bond: '=', rings: [5] }, { position: 13, depth: 0, value: 'C', rings: [5] }, { position: 15, depth: 0, value: 'C', rings: [5] }, { position: 16, depth: 0, value: 'C', bond: '=', rings: [5] }, { position: 17, depth: 0, value: 'C', rings: [5, 4] }] }] } });
export const v26 = Linear(['C', 'C', 'O']);
export const v27 = Linear(['O'], ['=']);
export const v28 = v26.attach(1, v27);
export const v29 = Molecule([v1, v25, v28]);"
`;

exports[`Fluticasone Integration Test parses fluticasone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "O",
        "C",
        "F",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "S",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Fluticasone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['C']);
export const v4 = v2.attach(4, v3);
export const v5 = Linear(['O']);
export const v6 = v4.attach(5, v5);
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2 });
export const v8 = Linear(['F']);
export const v9 = v7.attach(3, v8);
export const v10 = Linear(['O']);
export const v11 = v9.attach(4, v10);
export const v12 = Linear(['C']);
export const v13 = v11.attach(6, v12);
export const v14 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v15 = Linear(['C']);
export const v16 = v14.attach(5, v15);
export const v17 = Linear(['F']);
export const v18 = v16.attach(6, v17);
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(3, v20);
export const v22 = Linear(['C']);
export const v23 = v21.attach(6, v22);
export const v24 = FusedRing({ metadata: { rings: [{ ring: v6, start: 1, end: 22, atoms: [{ position: 1, depth: 0, value: 'C', rings: [1, 1] }, { position: 2, depth: 0, value: 'C', rings: [1] }, { position: 3, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 20, depth: 0, value: 'C', rings: [2, 1] }, { position: 22, depth: 0, value: 'C', rings: [1] }] }, { ring: v13, start: 3, end: 20, atoms: [{ position: 3, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 4, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 15, depth: 0, value: 'C', rings: [3, 2] }, { position: 17, depth: 0, value: 'C', rings: [2] }, { position: 19, depth: 0, value: 'C', rings: [2] }, { position: 20, depth: 0, value: 'C', rings: [2, 1] }] }, { ring: v18, start: 4, end: 15, atoms: [{ position: 4, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 5, depth: 0, value: 'C', rings: [3] }, { position: 6, depth: 0, value: 'C', rings: [3] }, { position: 7, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 13, depth: 0, value: 'C', rings: [4, 3] }, { position: 15, depth: 0, value: 'C', rings: [3, 2] }] }, { ring: v23, start: 7, end: 13, atoms: [{ position: 7, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 8, depth: 0, value: 'C', bond: '=', rings: [4] }, { position: 9, depth: 0, value: 'C', rings: [4] }, { position: 11, depth: 0, value: 'C', rings: [4] }, { position: 12, depth: 0, value: 'C', bond: '=', rings: [4] }, { position: 13, depth: 0, value: 'C', rings: [4, 3] }] }] } });
export const v25 = Linear(['C', 'O', 'C', 'F']);
export const v26 = Linear(['S'], ['=']);
export const v27 = v25.attach(1, v26);
export const v28 = Molecule([v1, v24, v27]);"
`;

exports[`Beclomethasone Integration Test parses beclomethasone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "Cl",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "Cl",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Beclomethasone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['C']);
export const v4 = v2.attach(4, v3);
export const v5 = Linear(['O']);
export const v6 = v4.attach(5, v5);
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2 });
export const v8 = Linear(['Cl']);
export const v9 = v7.attach(3, v8);
export const v10 = Linear(['O']);
export const v11 = v9.attach(4, v10);
export const v12 = Linear(['C']);
export const v13 = v11.attach(6, v12);
export const v14 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v15 = Linear(['C']);
export const v16 = v14.attach(5, v15);
export const v17 = Linear(['Cl']);
export const v18 = v16.attach(6, v17);
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(3, v20);
export const v22 = Linear(['C']);
export const v23 = v21.attach(6, v22);
export const v24 = FusedRing({ metadata: { rings: [{ ring: v6, start: 1, end: 22, atoms: [{ position: 1, depth: 0, value: 'C', rings: [1, 1] }, { position: 2, depth: 0, value: 'C', rings: [1] }, { position: 3, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 20, depth: 0, value: 'C', rings: [2, 1] }, { position: 22, depth: 0, value: 'C', rings: [1] }] }, { ring: v13, start: 3, end: 20, atoms: [{ position: 3, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 4, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 15, depth: 0, value: 'C', rings: [3, 2] }, { position: 17, depth: 0, value: 'C', rings: [2] }, { position: 19, depth: 0, value: 'C', rings: [2] }, { position: 20, depth: 0, value: 'C', rings: [2, 1] }] }, { ring: v18, start: 4, end: 15, atoms: [{ position: 4, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 5, depth: 0, value: 'C', rings: [3] }, { position: 6, depth: 0, value: 'C', rings: [3] }, { position: 7, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 13, depth: 0, value: 'C', rings: [4, 3] }, { position: 15, depth: 0, value: 'C', rings: [3, 2] }] }, { ring: v23, start: 7, end: 13, atoms: [{ position: 7, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 8, depth: 0, value: 'C', bond: '=', rings: [4] }, { position: 9, depth: 0, value: 'C', rings: [4] }, { position: 11, depth: 0, value: 'C', rings: [4] }, { position: 12, depth: 0, value: 'C', bond: '=', rings: [4] }, { position: 13, depth: 0, value: 'C', rings: [4, 3] }] }] } });
export const v25 = Linear(['C', 'C', 'O']);
export const v26 = Linear(['O'], ['=']);
export const v27 = v25.attach(1, v26);
export const v28 = Molecule([v1, v24, v27]);"
`;

exports[`Fludrocortisone Integration Test parses fludrocortisone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "10": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "2": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Fludrocortisone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, null, '=', null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(4, v3);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, null, '=', null, null, null, null, null] });
export const v6 = Linear(['F']);
export const v7 = v5.attach(10, v6);
export const v8 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v9 = Linear(['O']);
export const v10 = v8.attach(3, v9);
export const v11 = Linear(['C']);
export const v12 = v10.attach(5, v11);
export const v13 = Linear(['C', 'C', 'O']);
export const v14 = Linear(['O'], ['=']);
export const v15 = v13.attach(1, v14);
export const v16 = v12.attach(6, v15);
export const v17 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v18 = v4.fuse(0, v7);
export const v19 = v18.addRing(8, v16);
export const v20 = v19.addRing(12, v17);
export const v21 = Molecule([v1, v20]);"
`;

exports[`Mometasone Integration Test parses mometasone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "Cl",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "Cl",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "Cl",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Mometasone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['C']);
export const v4 = v2.attach(4, v3);
export const v5 = Linear(['O']);
export const v6 = v4.attach(5, v5);
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2 });
export const v8 = Linear(['Cl']);
export const v9 = v7.attach(3, v8);
export const v10 = Linear(['O']);
export const v11 = v9.attach(4, v10);
export const v12 = Linear(['C']);
export const v13 = v11.attach(6, v12);
export const v14 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v15 = Linear(['C']);
export const v16 = v14.attach(5, v15);
export const v17 = Linear(['Cl']);
export const v18 = v16.attach(6, v17);
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(3, v20);
export const v22 = Linear(['C']);
export const v23 = v21.attach(6, v22);
export const v24 = FusedRing({ metadata: { rings: [{ ring: v6, start: 1, end: 22, atoms: [{ position: 1, depth: 0, value: 'C', rings: [1, 1] }, { position: 2, depth: 0, value: 'C', rings: [1] }, { position: 3, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 20, depth: 0, value: 'C', rings: [2, 1] }, { position: 22, depth: 0, value: 'C', rings: [1] }] }, { ring: v13, start: 3, end: 20, atoms: [{ position: 3, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 4, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 15, depth: 0, value: 'C', rings: [3, 2] }, { position: 17, depth: 0, value: 'C', rings: [2] }, { position: 19, depth: 0, value: 'C', rings: [2] }, { position: 20, depth: 0, value: 'C', rings: [2, 1] }] }, { ring: v18, start: 4, end: 15, atoms: [{ position: 4, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 5, depth: 0, value: 'C', rings: [3] }, { position: 6, depth: 0, value: 'C', rings: [3] }, { position: 7, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 13, depth: 0, value: 'C', rings: [4, 3] }, { position: 15, depth: 0, value: 'C', rings: [3, 2] }] }, { ring: v23, start: 7, end: 13, atoms: [{ position: 7, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 8, depth: 0, value: 'C', bond: '=', rings: [4] }, { position: 9, depth: 0, value: 'C', rings: [4] }, { position: 11, depth: 0, value: 'C', rings: [4] }, { position: 12, depth: 0, value: 'C', bond: '=', rings: [4] }, { position: 13, depth: 0, value: 'C', rings: [4, 3] }] }] } });
export const v25 = Linear(['C', 'C', 'Cl']);
export const v26 = Linear(['O'], ['=']);
export const v27 = v25.attach(1, v26);
export const v28 = Molecule([v1, v24, v27]);"
`;

exports[`Cortisol Integration Test parses cortisol (alias for hydrocortisone) 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 9,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "1": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "2": [
              {
                "atoms": [
                  "C",
                  "C",
                  "O",
                ],
                "attachments": {
                  "1": [
                    {
                      "atoms": [
                        "O",
                      ],
                      "attachments": {},
                      "bonds": [
                        "=",
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Cortisol Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: [null, null, null, null, '=', null] });
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(4, v3);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: [null, null, null, null, '=', null, null, null, null, null] });
export const v6 = Ring({ atoms: 'C', size: 9, offset: 8 });
export const v7 = Linear(['O']);
export const v8 = v6.attach(3, v7);
export const v9 = Linear(['C']);
export const v10 = v8.attach(5, v9);
export const v11 = Linear(['C', 'C', 'O']);
export const v12 = Linear(['O'], ['=']);
export const v13 = v11.attach(1, v12);
export const v14 = v10.attach(6, v13);
export const v15 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 12 });
export const v16 = v4.fuse(0, v5);
export const v17 = v16.addRing(8, v14);
export const v18 = v17.addRing(12, v15);
export const v19 = Linear(['O']);
export const v20 = Molecule([v1, v18, v19]);"
`;

exports[`Betamethasone Integration Test parses betamethasone (same SMILES as dexamethasone) 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "5": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "5": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "F",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
            "6": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 4,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Betamethasone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5 });
export const v3 = Linear(['C']);
export const v4 = v2.attach(4, v3);
export const v5 = Linear(['O']);
export const v6 = v4.attach(5, v5);
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2 });
export const v8 = Linear(['F']);
export const v9 = v7.attach(3, v8);
export const v10 = Linear(['O']);
export const v11 = v9.attach(4, v10);
export const v12 = Linear(['C']);
export const v13 = v11.attach(6, v12);
export const v14 = Ring({ atoms: 'C', size: 6, ringNumber: 3 });
export const v15 = Linear(['C']);
export const v16 = v14.attach(5, v15);
export const v17 = Linear(['F']);
export const v18 = v16.attach(6, v17);
export const v19 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, null, '=', null, null] });
export const v20 = Linear(['O'], ['=']);
export const v21 = v19.attach(3, v20);
export const v22 = Linear(['C']);
export const v23 = v21.attach(6, v22);
export const v24 = FusedRing({ metadata: { rings: [{ ring: v6, start: 1, end: 22, atoms: [{ position: 1, depth: 0, value: 'C', rings: [1, 1] }, { position: 2, depth: 0, value: 'C', rings: [1] }, { position: 3, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 20, depth: 0, value: 'C', rings: [2, 1] }, { position: 22, depth: 0, value: 'C', rings: [1] }] }, { ring: v13, start: 3, end: 20, atoms: [{ position: 3, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 4, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 15, depth: 0, value: 'C', rings: [3, 2] }, { position: 17, depth: 0, value: 'C', rings: [2] }, { position: 19, depth: 0, value: 'C', rings: [2] }, { position: 20, depth: 0, value: 'C', rings: [2, 1] }] }, { ring: v18, start: 4, end: 15, atoms: [{ position: 4, depth: 0, value: 'C', rings: [3, 3, 2] }, { position: 5, depth: 0, value: 'C', rings: [3] }, { position: 6, depth: 0, value: 'C', rings: [3] }, { position: 7, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 13, depth: 0, value: 'C', rings: [4, 3] }, { position: 15, depth: 0, value: 'C', rings: [3, 2] }] }, { ring: v23, start: 7, end: 13, atoms: [{ position: 7, depth: 0, value: 'C', rings: [4, 4, 3] }, { position: 8, depth: 0, value: 'C', bond: '=', rings: [4] }, { position: 9, depth: 0, value: 'C', rings: [4] }, { position: 11, depth: 0, value: 'C', rings: [4] }, { position: 12, depth: 0, value: 'C', bond: '=', rings: [4] }, { position: 13, depth: 0, value: 'C', rings: [4, 3] }] }] } });
export const v25 = Linear(['C', 'C', 'O']);
export const v26 = Linear(['O'], ['=']);
export const v27 = v25.attach(1, v26);
export const v28 = Molecule([v1, v24, v27]);"
`;
